--- a/3.evaluate_model/class_PR_curves.ipynb
+++ b/3.evaluate_model/class_PR_curves.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import Libraries"
+    "### Import Libraries\n"
    ]
   },
   {
@@ -19,6 +19,7 @@
     "from matplotlib import pyplot as plt\n",
     "\n",
     "import sys\n",
+    "\n",
     "sys.path.append(\"../utils\")\n",
     "from split_utils import get_features_data\n",
     "from train_utils import get_dataset\n",
@@ -29,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load models and datasets"
+    "### Load models and datasets\n"
    ]
   },
   {
@@ -48,14 +49,14 @@
     "test_data = get_dataset(features_dataframe, data_split_indexes, \"test\")\n",
     "\n",
     "save_dir = pathlib.Path(\"evaluations/class_precision_recall_curves/\")\n",
-    "save_dir.mkdir(parents=True, exist_ok=True)"
+    "save_dir.mkdir(parents=True, exist_ok=True)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Evaluate Each Model on Each Dataset"
+    "### Evaluate Each Model on Each Dataset\n"
    ]
   },
   {
@@ -305,7 +306,7 @@
     "    model = load(model_path)\n",
     "    # determine model/feature type from model file name\n",
     "    model_type = model_path.name.split(\"__\")[0]\n",
-    "    feature_type = model_path.name.split(\"__\")[1].replace(\".joblib\",\"\")\n",
+    "    feature_type = model_path.name.split(\"__\")[1].replace(\".joblib\", \"\")\n",
     "\n",
     "    # iterate through label datasets (labels correspond to train, test, etc)\n",
     "    # with nested for loops, we test each model on each dataset(corresponding to a label)\n",
@@ -319,7 +320,9 @@
     "\n",
     "        # get class PR curve data and show curve\n",
     "        fig, PR_data = class_PR_curves(data, model, feature_type)\n",
-    "        fig.suptitle(f\"PR curves for {model_type} model using {feature_type} features on {label} dataset\")\n",
+    "        fig.suptitle(\n",
+    "            f\"PR curves for {model_type} model using {feature_type} features on {label} dataset\"\n",
+    "        )\n",
     "        plt.show()\n",
     "\n",
     "        # add data split column to indicate which dataset scores are from (train, test, etc)\n",
@@ -328,16 +331,16 @@
     "        PR_data[\"shuffled\"] = \"shuffled\" in model_type\n",
     "        # add feature type column to indicate which features model has been trained on/is using\n",
     "        PR_data[\"feature_type\"] = feature_type\n",
-    "        \n",
+    "\n",
     "        # add this score data to the tidy scores compiling list\n",
-    "        compiled_class_PR_curves.append(PR_data)"
+    "        compiled_class_PR_curves.append(PR_data)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Save PR curves from each evaluation"
+    "### Save PR curves from each evaluation\n"
    ]
   },
   {
@@ -535,7 +538,9 @@
     "class_PR_curves_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# define save path\n",
-    "compiled_scores_save_path = pathlib.Path(f\"{class_PR_curves_dir}/compiled_class_PR_curves.tsv\")\n",
+    "compiled_scores_save_path = pathlib.Path(\n",
+    "    f\"{class_PR_curves_dir}/compiled_class_PR_curves.tsv\"\n",
+    ")\n",
     "\n",
     "# save data as tsv\n",
     "compiled_class_PR_curves.to_csv(compiled_scores_save_path, sep=\"\\t\")\n",
