--- a/3.evaluate_model/confusion_matrices.ipynb
+++ b/3.evaluate_model/confusion_matrices.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import Libraries"
+    "### Import Libraries\n"
    ]
   },
   {
@@ -18,6 +18,7 @@
     "from joblib import load\n",
     "\n",
     "import sys\n",
+    "\n",
     "sys.path.append(\"../utils\")\n",
     "from split_utils import get_features_data\n",
     "from train_utils import get_dataset\n",
@@ -28,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load Datasets"
+    "### Load Datasets\n"
    ]
   },
   {
@@ -41,14 +42,14 @@
     "data_split_path = pathlib.Path(\"../1.split_data/indexes/data_split_indexes.tsv\")\n",
     "data_split_indexes = pd.read_csv(data_split_path, sep=\"\\t\", index_col=0)\n",
     "features_dataframe_path = pathlib.Path(\"../0.download_data/data/labeled_data.csv.gz\")\n",
-    "features_dataframe = get_features_data(features_dataframe_path)"
+    "features_dataframe = get_features_data(features_dataframe_path)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Specify Results Directory"
+    "### Specify Results Directory\n"
    ]
   },
   {
@@ -60,7 +61,7 @@
     "# specify results directory\n",
     "results_dir = pathlib.Path(\"evaluations/\")\n",
     "cm_dir = pathlib.Path(f\"{results_dir}/confusion_matrices/\")\n",
-    "cm_dir.mkdir(parents=True, exist_ok=True)"
+    "cm_dir.mkdir(parents=True, exist_ok=True)\n"
    ]
   },
   {
@@ -69,7 +70,7 @@
    "source": [
     "### Evaluate Each Model on Each Dataset\n",
     "\n",
-    "#### Note: `cm` stands for confusion matrix in variable names"
+    "#### Note: `cm` stands for confusion matrix in variable names\n"
    ]
   },
   {
@@ -318,26 +319,26 @@
     "    model = load(model_path)\n",
     "    # determine model/feature type from model file name\n",
     "    model_type = model_path.name.split(\"__\")[0]\n",
-    "    feature_type = model_path.name.split(\"__\")[1].replace(\".joblib\",\"\")\n",
-    "    \n",
+    "    feature_type = model_path.name.split(\"__\")[1].replace(\".joblib\", \"\")\n",
+    "\n",
     "    # iterate through label datasets (labels correspond to train, test, etc)\n",
     "    # with nested for loops, we test each model on each dataset(corresponding to a label)\n",
     "    for label in data_split_indexes[\"label\"].unique():\n",
     "        print(\n",
     "            f\"Evaluating model: {model_type} \\nTrained with features: {feature_type} \\nEvaluating with dataset: {label}\"\n",
     "        )\n",
-    "        \n",
+    "\n",
     "        # load dataset (train, test, etc)\n",
     "        data = get_dataset(features_dataframe, data_split_indexes, label)\n",
-    "        # find confusion matrix for chosen model evaluated on chosen dataset      \n",
+    "        # find confusion matrix for chosen model evaluated on chosen dataset\n",
     "        cm_data = model_confusion_matrix(model, data, feature_type)\n",
-    "        \n",
+    "\n",
     "        # add confusion matrix data to compiled dataframe in tidy format\n",
     "        # use stack to restructure dataframe into tidy long format\n",
     "        cm_data = cm_data.stack()\n",
     "        # reset index must be used to make indexes at level 0 and 1 into individual columns\n",
     "        # these columns correspond to true label and predicted label, and are set as indexes after using stack()\n",
-    "        cm_data = pd.DataFrame(cm_data).reset_index(level=[0,1])\n",
+    "        cm_data = pd.DataFrame(cm_data).reset_index(level=[0, 1])\n",
     "        cm_data.columns = [\"True_Label\", \"Predicted_Label\", \"Count\"]\n",
     "        # add data split column to indicate which dataset scores are from (train, test, etc)\n",
     "        cm_data[\"data_split\"] = label\n",
@@ -345,16 +346,16 @@
     "        cm_data[\"shuffled\"] = \"shuffled\" in model_type\n",
     "        # add feature type column to indicate which features model has been trained on/is using\n",
     "        cm_data[\"feature_type\"] = feature_type\n",
-    "        \n",
+    "\n",
     "        # add this score data to the tidy scores compiling list\n",
-    "        compiled_cm_data.append(cm_data)"
+    "        compiled_cm_data.append(cm_data)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Save scores from each evaluation"
+    "### Save scores from each evaluation\n"
    ]
   },
   {
@@ -546,7 +547,7 @@
     "compiled_cm_data.to_csv(compiled_cm_data_save_path, sep=\"\\t\")\n",
     "\n",
     "# preview tidy data\n",
-    "compiled_cm_data"
+    "compiled_cm_data\n"
    ]
   }
  ],
