--- a/3.evaluate_model/get_model_predictions.ipynb
+++ b/3.evaluate_model/get_model_predictions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import Libraries"
+    "### Import Libraries\n"
    ]
   },
   {
@@ -21,6 +21,7 @@
     "from joblib import load\n",
     "\n",
     "import sys\n",
+    "\n",
     "sys.path.append(\"../utils\")\n",
     "from split_utils import get_features_data\n",
     "from train_utils import get_dataset, get_X_y_data"
@@ -30,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load necessary data"
+    "### Load necessary data\n"
    ]
   },
   {
@@ -43,14 +44,14 @@
     "data_split_path = pathlib.Path(\"../1.split_data/indexes/data_split_indexes.tsv\")\n",
     "data_split_indexes = pd.read_csv(data_split_path, sep=\"\\t\", index_col=0)\n",
     "features_dataframe_path = pathlib.Path(\"../0.download_data/data/labeled_data.csv.gz\")\n",
-    "features_dataframe = get_features_data(features_dataframe_path)"
+    "features_dataframe = get_features_data(features_dataframe_path)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get Each Model Predictions on Each Dataset"
+    "### Get Each Model Predictions on Each Dataset\n"
    ]
   },
   {
@@ -89,7 +90,7 @@
     "    model = load(model_path)\n",
     "    # determine model/feature type from model file name\n",
     "    model_type = model_path.name.split(\"__\")[0]\n",
-    "    feature_type = model_path.name.split(\"__\")[1].replace(\".joblib\",\"\")\n",
+    "    feature_type = model_path.name.split(\"__\")[1].replace(\".joblib\", \"\")\n",
     "\n",
     "    # iterate through label datasets (labels correspond to train, test, etc)\n",
     "    # with nested for loops, we test each model on each dataset(corresponding to a label)\n",
@@ -112,9 +113,9 @@
     "        # get predictions from model\n",
     "        y_pred = model.predict(X)\n",
     "\n",
-    "        # create dataframe with dataset index of cell being predicted, \n",
-    "        # predicted phenotypic class, \n",
-    "        # true phenotypic class, \n",
+    "        # create dataframe with dataset index of cell being predicted,\n",
+    "        # predicted phenotypic class,\n",
+    "        # true phenotypic class,\n",
     "        # and which dataset/models are involved in prediction\n",
     "        predictions_df = pd.DataFrame(\n",
     "            {\n",
@@ -123,7 +124,7 @@
     "                \"Phenotypic_Class_True\": y_pred,\n",
     "                \"data_split\": label,\n",
     "                \"shuffled\": \"shuffled\" in model_type,\n",
-    "                \"feature_type\": feature_type\n",
+    "                \"feature_type\": feature_type,\n",
     "            }\n",
     "        )\n",
     "\n",
@@ -134,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Compile and Save Predictions"
+    "### Compile and Save Predictions\n"
    ]
   },
   {
@@ -323,7 +324,7 @@
     "compiled_predictions.to_csv(compiled_predictions_save_path, sep=\"\\t\")\n",
     "\n",
     "# preview compiled predictions\n",
-    "compiled_predictions"
+    "compiled_predictions\n"
    ]
   }
  ],
