--- a/3.evaluate_model/F1_scores.ipynb
+++ b/3.evaluate_model/F1_scores.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import Libraries"
+    "### Import Libraries\n"
    ]
   },
   {
@@ -18,17 +18,18 @@
     "from joblib import load\n",
     "\n",
     "import sys\n",
+    "\n",
     "sys.path.append(\"../utils\")\n",
     "from split_utils import get_features_data\n",
     "from train_utils import get_dataset\n",
-    "from evaluate_utils import model_F1_score"
+    "from evaluate_utils import model_F1_score\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load Necessary Data"
+    "### Load Necessary Data\n"
    ]
   },
   {
@@ -41,14 +42,14 @@
     "data_split_path = pathlib.Path(\"../1.split_data/indexes/data_split_indexes.tsv\")\n",
     "data_split_indexes = pd.read_csv(data_split_path, sep=\"\\t\", index_col=0)\n",
     "features_dataframe_path = pathlib.Path(\"../0.download_data/data/labeled_data.csv.gz\")\n",
-    "features_dataframe = get_features_data(features_dataframe_path)"
+    "features_dataframe = get_features_data(features_dataframe_path)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Evaluate Each Model on Each Dataset"
+    "### Evaluate Each Model on Each Dataset\n"
    ]
   },
   {
@@ -297,20 +298,20 @@
     "    model = load(model_path)\n",
     "    # determine model/feature type from model file name\n",
     "    model_type = model_path.name.split(\"__\")[0]\n",
-    "    feature_type = model_path.name.split(\"__\")[1].replace(\".joblib\",\"\")\n",
-    "    \n",
+    "    feature_type = model_path.name.split(\"__\")[1].replace(\".joblib\", \"\")\n",
+    "\n",
     "    # iterate through label datasets (labels correspond to train, test, etc)\n",
     "    # with nested for loops, we test each model on each dataset(corresponding to a label)\n",
     "    for label in data_split_indexes[\"label\"].unique():\n",
     "        print(\n",
     "            f\"Evaluating model: {model_type} \\nTrained with features: {feature_type} \\nEvaluating with dataset: {label}\"\n",
     "        )\n",
-    "        \n",
+    "\n",
     "        # load dataset (train, test, etc)\n",
     "        data = get_dataset(features_dataframe, data_split_indexes, label)\n",
     "        # find model F1 scores on dataset\n",
     "        score = model_F1_score(model, data, feature_type)\n",
-    "        \n",
+    "\n",
     "        # add score data to compiled dataframe in tidy format\n",
     "        # transpose data and reset index to make dataframe resemble tidy long format\n",
     "        score = score.T.reset_index()\n",
@@ -322,16 +323,16 @@
     "        score[\"shuffled\"] = \"shuffled\" in model_type\n",
     "        # add feature type column to indicate which features model has been trained on/is using\n",
     "        score[\"feature_type\"] = feature_type\n",
-    "        \n",
+    "\n",
     "        # add this score data to the tidy scores compiling list\n",
-    "        compiled_scores.append(score)"
+    "        compiled_scores.append(score)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Save scores from each evaluation"
+    "### Save scores from each evaluation\n"
    ]
   },
   {
@@ -498,7 +499,7 @@
     "compiled_scores.to_csv(compiled_scores_save_path, sep=\"\\t\")\n",
     "\n",
     "# preview tidy data\n",
-    "compiled_scores"
+    "compiled_scores\n"
    ]
   }
  ],
