erik suggestions, reconvert

--- a/3.evaluate_model/class_PR_curves.ipynb
+++ b/3.evaluate_model/class_PR_curves.ipynb
@@ -301,6 +301,7 @@
     "compiled_class_PR_curves = []\n",
     "\n",
     "# iterate through each model (final model, shuffled baseline model, etc)\n",
+    "# sorted so final models are shown before shuffled_baseline\n",
     "for model_path in sorted(models_dir.iterdir()):\n",
     "    # load model\n",
     "    model = load(model_path)\n",
