--- a/3.evaluate_model/get_model_predictions.ipynb
+++ b/3.evaluate_model/get_model_predictions.ipynb
@@ -86,6 +86,7 @@
     "compiled_predictions = []\n",
     "\n",
     "# iterate through each model (final model, shuffled baseline model, etc)\n",
+    "# sorted so final models are shown before shuffled_baseline\n",
     "for model_path in sorted(models_dir.iterdir()):\n",
     "    model = load(model_path)\n",
     "    # determine model/feature type from model file name\n",
