--- a/3.evaluate_model/confusion_matrices.ipynb
+++ b/3.evaluate_model/confusion_matrices.ipynb
@@ -315,6 +315,7 @@
     "compiled_cm_data = []\n",
     "\n",
     "# iterate through each model (final model, shuffled baseline model, etc)\n",
+    "# sorted so final models are shown before shuffled_baseline\n",
     "for model_path in sorted(models_dir.iterdir()):\n",
     "    model = load(model_path)\n",
     "    # determine model/feature type from model file name\n",
