docs, reconvert script

--- a/4.interpret_model/interpret_model_coefficients.ipynb
+++ b/4.interpret_model/interpret_model_coefficients.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import Libraries"
+    "### Import Libraries\n"
    ]
   },
   {
@@ -25,14 +25,14 @@
     "import sys\n",
     "\n",
     "sys.path.append(\"../utils\")\n",
-    "from split_utils import get_features_data"
+    "from split_utils import get_features_data\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load Labeled Data"
+    "### Load Labeled Data\n"
    ]
   },
   {
@@ -458,14 +458,14 @@
     "# load labeled data\n",
     "labeled_data_path = pathlib.Path(\"../0.download_data/data/labeled_data.csv.gz\")\n",
     "labeled_data = get_features_data(labeled_data_path)\n",
-    "labeled_data"
+    "labeled_data\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Save Coefficients and Create Interpretation Figures"
+    "### Save Coefficients and Create Interpretation Figures\n"
    ]
   },
   {
@@ -821,18 +821,18 @@
     "    feature_type = model_path.name.split(\"__\")[1].replace(\".joblib\", \"\")\n",
     "\n",
     "    print(f\"Interpreting model: {model_type} \\nTrained with features: {feature_type}\")\n",
-    "    \n",
+    "\n",
     "    # get model coefficients and reshape them into a more useable format\n",
     "    coefs = np.abs(model.coef_)\n",
     "    coefs = pd.DataFrame(coefs).T\n",
     "    coefs.columns = model.classes_\n",
     "    print(f\"Shape of model coefficients{coefs.shape}\")\n",
-    "    \n",
+    "\n",
     "    # restructure/rename dataframe to tidy long format (see preview below)\n",
     "    tidy_data = coefs.stack()\n",
-    "    tidy_data = pd.DataFrame(tidy_data).reset_index(level=[0,1])\n",
+    "    tidy_data = pd.DataFrame(tidy_data).reset_index(level=[0, 1])\n",
     "    tidy_data.columns = [\"Feature_Name\", \"Phenotypic_Class\", \"Value\"]\n",
-    "    \n",
+    "\n",
     "    # add feature names to coefficientss dataframe\n",
     "    # feature names depends on feature type\n",
     "    all_cols = labeled_data.columns.tolist()\n",
@@ -846,19 +846,23 @@
     "    # add repeats to feature cols equal to the number of classes\n",
     "    feature_names = [col for col in feature_cols for i in range(len(model.classes_))]\n",
     "    tidy_data[\"Feature_Name\"] = feature_names\n",
-    "    \n",
+    "\n",
     "    # save tidy coefficients dataframe\n",
-    "    coefs_save_path = pathlib.Path(f\"{coefs_save_directory}/{model_type}__{feature_type}__coefficients.tsv\")\n",
+    "    coefs_save_path = pathlib.Path(\n",
+    "        f\"{coefs_save_directory}/{model_type}__{feature_type}__coefficients.tsv\"\n",
+    "    )\n",
     "    tidy_data.to_csv(coefs_save_path, sep=\"\\t\")\n",
-    "    \n",
+    "\n",
     "    # display heatmap of average coefs\n",
     "    plt.figure(figsize=(20, 10))\n",
     "    plt.title(\"Heatmap of Coefficients Matrix\")\n",
     "    ax = sns.heatmap(data=coefs.T)\n",
     "    plt.show()\n",
-    "    \n",
+    "\n",
     "    # display clustered heatmap of coefficients\n",
-    "    ax = sns.clustermap(data=coefs.T, figsize=(20, 10), row_cluster=True, col_cluster=True)\n",
+    "    ax = sns.clustermap(\n",
+    "        data=coefs.T, figsize=(20, 10), row_cluster=True, col_cluster=True\n",
+    "    )\n",
     "    ax = ax.fig.suptitle(\"Clustered Heatmap of Coefficients Matrix\")\n",
     "    plt.show()\n",
     "\n",
