--- a/2.train_model/train_model_LOIO.ipynb
+++ b/2.train_model/train_model_LOIO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,18 +19,18 @@
     ")\n",
     "from sklearn.utils import shuffle, parallel_backend\n",
     "from sklearn.exceptions import ConvergenceWarning\n",
-    "from joblib import dump\n",
+    "from joblib import dump, load\n",
     "\n",
     "import sys\n",
     "\n",
     "sys.path.append(\"../utils\")\n",
     "from split_utils import get_features_data\n",
-    "from train_utils import get_dataset, get_X_y_data\n"
+    "from train_utils import get_dataset, get_X_y_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        "[2862 rows x 1456 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,12 +466,12 @@
     "# get training data from labeled data\n",
     "# training_data = get_dataset(features_dataframe, data_split_indexes, \"train\")\n",
     "\n",
-    "labled_data"
+    "labled_data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -480,61 +480,100 @@
        "(270,)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "labled_data[\"Metadata_DNA\"].unique().shape"
+    "labled_data[\"Metadata_DNA\"].unique().shape\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Leaving out image LT0010_27/LT0010_27_173_83.tif\n"
+      "Performing LOIO for feature type CP with parameters C: 1.0, l1_ratio: 0.30000000000000004\n",
+      "training\n",
+      "Leaving out image: LT0010_27/LT0010_27_173_83.tif; number of cells: 24; score on image: 0.7916666666666666\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/roshankern/anaconda3/envs/phenotypic_profiling/lib/python3.8/site-packages/sklearn/linear_model/_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
-    "warnings.filterwarnings(\"ignore\", category=ConvergenceWarning, module=\"sklearn\")\n",
+    "# directory to load the models from\n",
+    "models_dir = pathlib.Path(\"models/\")\n",
     "\n",
-    "# iterate through image paths\n",
-    "for image_path in labled_data[\"Metadata_DNA\"].unique():\n",
-    "    print(f\"Leaving out image {image_path}\")\n",
+    "for model_path in sorted(models_dir.iterdir()):\n",
+    "    # only look at final models\n",
+    "    if \"final\" not in model_path.name:\n",
+    "        continue\n",
     "\n",
-    "    # get training and testing cells from image path\n",
-    "    # every cell from the image path is for testing, the rest are for training\n",
-    "    train_cells = labled_data.loc[labled_data[\"Metadata_DNA\"] != image_path]\n",
-    "    test_cells = labled_data.loc[labled_data[\"Metadata_DNA\"] == image_path]\n",
+    "    model = load(model_path)\n",
+    "    # determine feature type, C, and l1_ratio from model\n",
+    "    feature_type = model_path.name.split(\"__\")[1].replace(\".joblib\", \"\")\n",
     "\n",
-    "    # get X, y from training cells\n",
-    "    X_train, y_train = get_X_y_data(train_cells, \"CP_and_DP\")\n",
+    "    print(\n",
+    "        f\"Performing LOIO for feature type {feature_type} with parameters C: {model.C}, l1_ratio: {model.l1_ratio}\"\n",
+    "    )\n",
     "\n",
-    "    # fit a logisitc regression model on the training X, y\n",
-    "    clf = LogisticRegression(random_state=0).fit(X_train, y_train)\n",
+    "    # iterate through image paths\n",
+    "    for image_path in labled_data[\"Metadata_DNA\"].unique():\n",
+    "        # get training and testing cells from image path\n",
+    "        # every cell from the image path is for testing, the rest are for training\n",
+    "        train_cells = labled_data.loc[labled_data[\"Metadata_DNA\"] != image_path]\n",
+    "        test_cells = labled_data.loc[labled_data[\"Metadata_DNA\"] == image_path]\n",
     "\n",
-    "    break\n",
-    "\n"
+    "        # get X, y from training and testing cells\n",
+    "        X_train, y_train = get_X_y_data(train_cells, \"CP_and_DP\")\n",
+    "        X_test, y_test = get_X_y_data(test_cells, \"CP_and_DP\")\n",
+    "\n",
+    "        # capture convergence warning from sklearn\n",
+    "        # this warning does not affect the model but takes up lots of space in the output\n",
+    "        with parallel_backend(\"multiprocessing\"):\n",
+    "            with warnings.catch_warnings():\n",
+    "                warnings.filterwarnings(\n",
+    "                    \"ignore\", category=ConvergenceWarning, module=\"sklearn\"\n",
+    "                )\n",
+    "                \n",
+    "        # fit a logisitc regression model on the training X, y\n",
+    "        print(\"training\")\n",
+    "        clf = LogisticRegression(\n",
+    "            penalty=\"elasticnet\",\n",
+    "            solver=\"saga\",\n",
+    "            max_iter=10, #CHANGE TO 100\n",
+    "            n_jobs=-1,\n",
+    "            random_state=0,\n",
+    "            C=model.C,\n",
+    "            l1_ratio=model.l1_ratio,\n",
+    "        ).fit(X_train, y_train)\n",
+    "\n",
+    "        score = clf.score(X_test, y_test)\n",
+    "\n",
+    "        print(\n",
+    "            f\"Leaving out image: {image_path}; number of cells: {test_cells.shape[0]}; score on image: {score}\"\n",
+    "        )\n",
+    "        break\n",
+    "\n",
+    "    break"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3.8.13 ('phenotypic_profiling')",
    "language": "python",
    "name": "python3"
   },
@@ -548,12 +587,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "f9df586d1764dbc68785000a153dad1832127ac564b5e2e4c94e83fc43160b30"
    }
   }
  },
