--- a/3.evaluate_model/get_LOIO_probabilities.ipynb
+++ b/3.evaluate_model/get_LOIO_probabilities.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "sys.path.append(\"../utils\")\n",
     "from split_utils import get_features_data\n",
-    "from train_utils import get_dataset, get_X_y_data"
+    "from train_utils import get_dataset, get_X_y_data\n"
    ]
   },
   {
@@ -275,7 +275,7 @@
     "\n",
     "# preview labeled data\n",
     "print(labeled_data.shape)\n",
-    "labeled_data.head(5)"
+    "labeled_data.head(5)\n"
    ]
   },
   {
@@ -292,7 +292,7 @@
     }
    ],
    "source": [
-    "# see number of images to \n",
+    "# see number of images to\n",
     "num_images = labeled_data[\"Metadata_DNA\"].unique().shape[0]\n",
     "print(f\"There are {num_images} images to perform LOIO evaluation on per model.\")"
    ]
@@ -339,12 +339,12 @@
     "# iterate through each model (final model, shuffled baseline model, etc)\n",
     "# sorted so final models are loaded before shuffled_baseline\n",
     "for model_path in sorted(models_dir.iterdir()):\n",
-    "    \n",
+    "\n",
     "    # only perform LOIO with hyper params from final models\n",
     "    if \"shuffled\" in model_path.name:\n",
     "        continue\n",
     "\n",
-    "    #load the model\n",
+    "    # load the model\n",
     "    model = load(model_path)\n",
     "    # determine feature type from model file name\n",
     "    feature_type = model_path.name.split(\"__\")[1].replace(\".joblib\", \"\")\n",
@@ -402,18 +402,18 @@
     "\n",
     "        # combine metadata and probabilities dataframes for test cells to create wide data\n",
     "        test_cells_wide_data = pd.concat([metadata_dataframe, probas_dataframe], axis=1)\n",
-    "        \n",
+    "\n",
     "        # add tidy long data to compiled data\n",
     "        compiled_LOIO_wide_data.append(test_cells_wide_data)\n",
-    "        \n",
+    "\n",
     "        # DELETE THE REST OF THE LINES IN THIS NOTEBOOK BEFORE FINAL RUN\n",
     "        score = LOIO_model.score(X_test, y_test)\n",
     "        print(\n",
     "            f\"Leaving out image: {image_path}; number of cells: {test_cells.shape[0]}, score: {score}\"\n",
     "        )\n",
     "\n",
-    "        count +=1\n",
-    "        if count%5==0:\n",
+    "        count += 1\n",
+    "        if count % 5 == 0:\n",
     "            break"
    ]
   },
@@ -650,7 +650,9 @@
     "LOIO_probas_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# define save path\n",
-    "compiled_LOIO_save_path = pathlib.Path(f\"{LOIO_probas_dir}/compiled_LOIO_probabilites.tsv\")\n",
+    "compiled_LOIO_save_path = pathlib.Path(\n",
+    "    f\"{LOIO_probas_dir}/compiled_LOIO_probabilites.tsv\"\n",
+    ")\n",
     "\n",
     "# save data as tsv\n",
     "compiled_LOIO_tidy_long_data.to_csv(compiled_LOIO_save_path, sep=\"\\t\")\n",
