--- a/3.evaluate_model/get_LOIO_probabilities.ipynb
+++ b/3.evaluate_model/get_LOIO_probabilities.ipynb
@@ -10,22 +10,17 @@
     "import warnings\n",
     "\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import (\n",
-    "    StratifiedKFold,\n",
-    "    GridSearchCV,\n",
-    ")\n",
-    "from sklearn.utils import shuffle, parallel_backend\n",
+    "from sklearn.utils import parallel_backend\n",
     "from sklearn.exceptions import ConvergenceWarning\n",
-    "from joblib import dump, load\n",
+    "from joblib import load\n",
     "\n",
     "import sys\n",
     "\n",
     "sys.path.append(\"../utils\")\n",
     "from split_utils import get_features_data\n",
-    "from train_utils import get_dataset, get_X_y_data\n"
+    "from train_utils import get_dataset, get_X_y_data"
    ]
   },
   {
@@ -275,7 +270,7 @@
     "\n",
     "# preview labeled data\n",
     "print(labeled_data.shape)\n",
-    "labeled_data.head(5)\n"
+    "labeled_data.head(5)"
    ]
   },
   {
@@ -294,7 +289,7 @@
    "source": [
     "# see number of images to\n",
     "num_images = labeled_data[\"Metadata_DNA\"].unique().shape[0]\n",
-    "print(f\"There are {num_images} images to perform LOIO evaluation on per model.\")"
+    "print(f\"There are {num_images} images to perform LOIO evaluation on per model.\")\n"
    ]
   },
   {
@@ -339,7 +334,6 @@
     "# iterate through each model (final model, shuffled baseline model, etc)\n",
     "# sorted so final models are loaded before shuffled_baseline\n",
     "for model_path in sorted(models_dir.iterdir()):\n",
-    "\n",
     "    # only perform LOIO with hyper params from final models\n",
     "    if \"shuffled\" in model_path.name:\n",
     "        continue\n",
@@ -414,7 +408,7 @@
     "\n",
     "        count += 1\n",
     "        if count % 5 == 0:\n",
-    "            break"
+    "            break\n"
    ]
   },
   {
@@ -658,7 +652,7 @@
     "compiled_LOIO_tidy_long_data.to_csv(compiled_LOIO_save_path, sep=\"\\t\")\n",
     "\n",
     "# preview tidy long data\n",
-    "compiled_LOIO_tidy_long_data"
+    "compiled_LOIO_tidy_long_data\n"
    ]
   }
  ],
